# bookacle

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-workflow.yaml
docs/: gen_ref_pages.py
docs/stylesheets/: custom.css
docs/usage/: index.md  models.md
license/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/bookacle/: index.html
reference/bookacle/chat/: index.html
reference/bookacle/cli/: index.html
reference/bookacle/conf/: index.html
reference/bookacle/conf/config/: index.html
reference/bookacle/document/: index.html
reference/bookacle/loaders/: index.html
reference/bookacle/models/: index.html
reference/bookacle/models/embedding/: index.html
reference/bookacle/models/message/: index.html
reference/bookacle/models/qa/: index.html
reference/bookacle/models/summarization/: index.html
reference/bookacle/splitters/: index.html
reference/bookacle/tokenizer/: index.html
reference/bookacle/tree/: index.html
reference/bookacle/tree/builder/: index.html
reference/bookacle/tree/clustering/: index.html
reference/bookacle/tree/config/: index.html
reference/chat/: index.html
reference/cli/: index.html
reference/conf/: index.html
reference/conf/config/: index.html
reference/document/: index.html
reference/loaders/: index.html
reference/models/: index.html
reference/models/embedding/: index.html
reference/models/message/: index.html
reference/models/qa/: index.html
reference/models/summarization/: index.html
reference/splitters/: index.html
reference/tokenizer/: index.html
reference/tree/: index.html
reference/tree/builder/: index.html
reference/tree/clustering/: index.html
reference/tree/config/: index.html
reference/tree/retriever/: index.html
reference/tree/structures/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
snippets/: openai_embedding.py  simple_rag.py
src/bookacle/: __init__.py  __main__.py  chat.py  cli.py  document.py  loaders.py  models.py  rag.py  splitter.py  splitters.py  tokenizer.py  tokenizers.py
src/bookacle/conf/: __init__.py  config.py  defaults.py  prompts.toml  settings.toml
src/bookacle/models/: embedding.py  message.py  qa.py  summarization.py
src/bookacle/tree/: builder.py  clustering.py  config.py  retriever.py  structures.py  utils.py
stylesheets/: custom.css
usage/: index.html
usage/building-raptor-tree/: index.html
usage/cli/: index.html
usage/clustering/: index.html
usage/config/: index.html
usage/loaders/: index.html
usage/models/: index.html
usage/models/embedding/: index.html
usage/models/qa/: index.html
usage/models/summarization/: index.html
usage/retriever/: index.html
usage/splitters/: index.html
usage/tokenizers/: index.html
(+2 files in other folders)
