[project]
name = "bookacle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "langchain-community>=0.2.15",
    "langchain-huggingface>=0.0.3",
    "langchain>=0.2.15",
    "numpy>=1.26.4",
    "pymupdf>=1.24.9",
    "python-dotenv>=1.0.1",
    "scipy>=1.14.1",
]

[project.scripts]
hello = "bookacle:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
