[project]
name = "bookacle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "asyncio>=3.4.3",
    "joblib>=1.4.2",
    "langchain-community>=0.2.15",
    "langchain-huggingface>=0.0.3",
    "langchain>=0.2.15",
    "numpy>=1.26.4",
    "ollama>=0.3.3",
    "prompt-toolkit>=3.0.47",
    "pymupdf>=1.24.9",
    "python-dotenv>=1.0.1",
    "rich>=13.8.0",
    "scikit-learn>=1.5.1",
    "sentence-transformers>=3.0.1",
    "tqdm>=4.66.5",
    "transformers>=4.44.2",
    "umap-learn>=0.5.6",
]

[project.scripts]
hello = "bookacle:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
disable_error_code = ["import-untyped", "no-any-return", "unused-ignore"]
strict = true
plugins = "numpy.typing.mypy_plugin"
files = "src"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pymupdf4llm>=0.0.14",
]
