[project]
name = "bookacle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "asyncio>=3.4.3",
    "dynaconf>=3.2.6",
    "joblib>=1.4.2",
    "langchain-community>=0.2.15",
    "langchain>=0.2.15",
    "numpy>=1.26.4",
    "ollama>=0.3.3",
    "prompt-toolkit>=3.0.47",
    "pymupdf4llm>=0.0.16",
    "pymupdf>=1.24.9",
    "rich>=13.8.0",
    "scikit-learn>=1.5.1",
    "sentence-transformers>=3.0.1",
    "tqdm>=4.66.5",
    "transformers>=4.44.2",
    "typer>=0.12.5",
    "umap-learn>=0.5.6",
]

[project.scripts]
bookacle = "bookacle.cli:app"

[project.optional-dependencies]
docs = [
    "cairosvg>=2.7.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.39",
    "mkdocs-section-index>=0.3.9",
    "mkdocs>=1.6.1",
    "pillow>=10.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
disable_error_code = ["import-untyped", "no-any-return", "unused-ignore"]
strict = true
plugins = "numpy.typing.mypy_plugin"
files = "src"

[tool.black]
line-length = 90

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "huggingface-hub[cli]>=0.24.6",
    "mypy>=1.11.2",
]
